# lio-ai

./: .gitignore  LICENSE  Makefile  README.md  dev.sh  docker-compose.yml
ai/: Dockerfile  pyproject.toml  railway.json  requirements.txt  test_gemini.py
ai/app/: __init__.py  config.py  main.py  models.py
ai/app/providers/: __init__.py  gemini_provider.py  litellm_provider.py  ollama_provider.py
ai/app/services/: __init__.py  agentic_tools.py  code_generation.py  model_registry.py  prompt_manager.py
ai/config/: models.yaml  prompts.yaml
frontend/: .env.production  .prettierrc  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/src/: App.vue  main.ts
frontend/src/assets/: style.css
frontend/src/components/: ApiKeyModal.vue  DeleteConfirmModal.vue  LoadingSpinner.vue  ToastNotification.vue
frontend/src/components/charts/: PieChart.vue
frontend/src/components/chat/: ChatHeader.vue  ChatInput.vue  ChatMessage.vue
frontend/src/composables/: useToast.ts
frontend/src/router/: index.ts
frontend/src/services/: api.ts
frontend/src/stores/: chat.ts  codegen.ts  document.ts  index.ts  system.ts  usage.ts  user.ts
frontend/src/types/: index.ts
frontend/src/utils/: encryption.ts
frontend/src/views/: ChatView.vue  ConversationView.vue  DocumentsView.vue  GenerateView.vue  HomeView.vue  LoginView.vue  ModelsView.vue  ProfileView.vue  RegisterView.vue  SettingsView.vue
joles/: .editorconfig  Dockerfile  go.mod  go.sum  railway.json
joles/cmd/server/: main.go
joles/cmd/sync/: main.go
joles/internal/auth/: jwt.go  password.go
joles/internal/config/: config.go
joles/internal/db/: database.go
joles/internal/handlers/: auth_handler.go  batch_handler.go  chat_handler.go  document_handler.go  model_handler.go.unused  provider_key_handler.go  proxy_handler.go  search_handler.go  system_handler.go  usage_handler.go
joles/internal/middleware/: auth_middleware.go  csrf.go  gateway.go  middleware.go  usage_tracking.go
joles/internal/models/: chat.go  document.go  response.go  usage.go  user.go
joles/internal/repositories/: chat_repository.go  document_repository.go  provider_key_repository.go  usage_repository.go  user_repository.go
joles/internal/services/: chat_service.go  document_service.go  usage_service.go  user_service.go
joles/internal/utils/: response.go
joles/tests/: handlers_test.go  security_test.go
