[tool.poetry]
name = "lio-ai"
version = "0.1.0"
description = "A FastAPI-based AI application with document management capabilities"
authors = ["Your Name <you@example.com>"]
packages = [{include = "app"}]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.2"
pydantic-settings = "^2.0.0"
langchain = "^0.1.0"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
transformers = "^4.35.0"
torch = {version = "^2.1.0", optional = true}
peft = "^0.7.0"
qdrant-client = {version = "^2.7.0", extras = ["fastembed"]}
redis = "^5.0.0"
psycopg2-binary = "^2.9.0"
httpx = "^0.25.0"

[tool.poetry.extras]
gpu = ["torch"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.7.0"
types-redis = "^4.6.0"
httpx-mock = "^0.28.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "peft.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "qdrant_client.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--strict-markers --cov=app --cov-report=html --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
