[tool.poetry]
name = "lio-ai"
version = "0.1.0"
description = "Lio AI project"
authors = ["Your Name <you@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.5.0"
litellm = "^1.48.0"
google-generativeai = "^0.8.0"
SQLAlchemy = "^2.0.35"
redis = "^5.1.0"
pyyaml = "^6.0.2"
httpx = "^0.27.0"
tenacity = "^9.0.0"
prometheus-client = "^0.21.0"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
